# mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yaml  manage  pyproject.toml  requirements-dev.txt  requirements.txt  server.json
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  test.yml
deploy/: getbible-mcp.env  getbible-mcp.service
deploy/nginx/sites-available/: mcp.getbible.net.conf
docs/: ARCHITECTURE.md  CLIENTS.md  DEPLOYMENT.md  OPERATIONS.md  PUBLISHING.md  REGISTRY.md  SDK_DECISION.md  TESTING.md
scripts/: check  verify_release.py
site/: index.html  manifest.json
site/v2/: api.md  cache-policy.md  examples.md  index.html  llms.txt  manifest.json  openapi.json  tool-catalog.json  usage-policy.md
src/getbible_mcp/: __init__.py  __main__.py  cli.py  client.py  config.py  models.py  server.py
tests/: test_client.py  test_models.py  test_release.py  test_server_http.py  test_server_stdio.py  test_static_and_cli.py
