[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "getbible-mcp"
version = "1.0.0"
description = "GetBible API V2 server for the Model Context Protocol"
readme = "README.md"
license = "GPL-2.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{name = "GetBible"}]
keywords = ["bible", "getbible", "mcp", "model-context-protocol"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Religion",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "mcp==1.28.1",
]

[project.optional-dependencies]
dev = [
  "build==1.5.0",
  "mypy==2.3.0",
  "openapi-spec-validator==0.9.0",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "ruff==0.16.0",
]

[project.scripts]
getbible-mcp = "getbible_mcp.cli:main"

[project.urls]
Homepage = "https://mcp.getbible.net/"
Documentation = "https://mcp.getbible.net/v2/"
Repository = "https://github.com/getbible/mcp"
Issues = "https://github.com/getbible/mcp/issues"
Changelog = "https://github.com/getbible/mcp/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/getbible_mcp"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["getbible_mcp"]

[[tool.mypy.overrides]]
module = ["mcp", "mcp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "getbible_mcp.server"
disallow_untyped_decorators = false
